2011-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[inst int] Move $(mkmodcat) invocation from top dir to src/.

	* Makefile.am (install-data-hook): Delete target.

2011-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Fix bug: Distribute build-aux/guile-baux/*, too!

	Omission from 2011-05-03, "Import
	Guile-BAUX modules for doc snarfing".

	* Makefile.am (EXTRA_DIST): Add build-aux/guile-baux.

2011-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use Guile-BAUX for init snarfing.

	* autogen.sh: Import Guile-BAUX module ‘c2x’.
	* build-aux/guile-pg.m4 (AC_GUILE_PG_BCOMPAT):
	Delete call to ‘GUILE_C2X_METHOD’.

2011-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Decruft: Remove obsolete makefile target.

	* Makefile.am (destroy-nonmodule-guile-pg-prior-install):
	Delete target.

2011-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use Guile-BAUX for doc snarfing.

	* build-aux/common.mk: New file.

	* doc/Makefile.am: include .../common.mk;
	don't include twerp.mk-am-frag.
	(guile_pg_TEXINFOS): Add ref.texi.
	(EXTRA_DIST): Remove guile-pg.twerp; add ref.texh.
	[MAINTAINER_MODE] (.twerp.texi): Delete old-style suffix rule.
	[MAINTAINER_MODE] (SUFFIXES, snippets): New vars.
	[MAINTAINER_MODE] (.texh.texi): New old-style suffix rule.
	[MAINTAINER_MODE] (ref.texi): New dependency decl.
	* doc/guile-pg.texi: Rename from guile-pg.twerp.
	* doc/ref.texh: New file.
	* doc/.make-automake-frags: Delete file.
	* doc/.twerp-list: Delete file.

	* autogen.sh: Don't invoke doc/.make-automake-frags.
	* configure.ac (twerp-prep): Delete AC_CONFIG_COMMANDS.

2011-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build boot] Import Guile-BAUX modules for doc snarfing.

	* autogen.sh: Add command to import Guile-BAUX modules.

2011-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build boot] Don't install 3rd-party m4 files.

	* autogen.sh: Don't check guile.m4 for freshness;
	invoke aclocal without ‘--install’.
	* build-aux/guile.m4.snap: Delete file.
